<resources>
    <string name="app_name">Yantriki</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="start">Start</string>
    <string name="editProfileMessge">Click on the parameter to change it.</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">New Here? Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sets">Sets</string>
    <string name="_1_n">1/N</string>
    <string name="question">Question</string>
    <string name="t">T</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="new_score">New Score :</string>
    <string name="done">Done</string>
    <string name="best_score">Best Score :</string>
    <string name="autoquiz">Yantriki</string>
    <string name="quiz">Quiz</string>
    <string name="description">Description</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="welcome_to_autoquiz">Welcome to Dashboard!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_0">0</string>
    <string name="score">Score</string>
    <string name="edit">Edit</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="vibrations">Vibrations</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="account">ACCOUNT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="others">OTHERS</string>
    <string name="SAE_CLUB_MNNIT">SAE CLUB MNNIT</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="_1">1</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="please_wait">Please Wait...</string>
    <string name="banner_ad_unit_id">ca-app-pub-7455045588759877/3502852545</string>
    <string name="save">Save</string>
    <string name="the_vision_of_the_club_is_to_give_young_engineers_an_opportunity_to_showcase_their_talents_simultaneously_providing_a_platform_to_learn_and_gain_expertise_in_the_field_of_automobiles">The vision of the club is to give young engineers an opportunity to showcase their talents, simultaneously providing a platform to learn and gain expertise in the field of automobiles.</string>
    <string name="developers">Developers</string>
    <string name="anushree">Anushree</string>
    <string name="vibhanshu">Vibhanshu</string>
    <string name="simran">Simran</string>
    <string name="anant">Anant</string>
    <string name="kushagra">Kushagra</string>
    <string name="to_contribute_to_this_autoquiz_helps_students_to_test_their_knowledge_in_the_field_of_automobile_with_questions_of_varying_difficulty">To contribute to this, Yantriki helps students to test their knowledge in the field of Automobile with questions of varying difficulty.</string>
    <string name="version_1_0_2">Version 1.0.2</string>
</resources>