<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color4"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/app_settings"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/ic_sound" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sounds_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="false"
            android:gravity="center_vertical"
            android:switchMinWidth="40dp"
            android:text="@string/sound_effects"
            android:textColor="#95000000"
            android:textSize="20sp"
            android:thumbTint="@color/ic_launcher_background"
            app:thumbTint="@color/colorBack2"
            app:trackTint="@color/colorSubTitle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/ic_vibration" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vibration_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="true"
            android:gravity="center_vertical"
            android:switchMinWidth="40dp"
            android:text="@string/vibrations"
            android:textColor="#95000000"
            android:textSize="20sp"
            app:thumbTint="@color/colorBack2"
            app:trackTint="@color/colorSubTitle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/ic_notif" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/push_notif_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:checked="true"
            android:gravity="center_vertical"
            android:switchMinWidth="40dp"
            android:text="@string/push_notifications"
            android:textColor="#95000000"
            android:textSize="20sp"
            app:thumbTint="@color/colorBack2"
            app:trackTint="@color/colorSubTitle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@color/color4"
            android:gravity="center_vertical"
            android:paddingStart="15sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/account"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_edit" />

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/edit_profile"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#95000000"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="35dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_delete" />

            <Button
                android:id="@+id/delete_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/delete_account"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#95000000"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@color/color4"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/others"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_about" />

            <Button
                android:id="@+id/about_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/about"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#95000000"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="35dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_logout" />

            <Button
                android:id="@+id/logoutButton1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#ffffff"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="#95000000"
                android:textSize="20sp"
                android:textAlignment="viewStart"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="35dp"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible"/>

    </LinearLayout>


</LinearLayout>